# stateanchor

./: .gitignore  .gitmodules  README.md
state_anchor/: spec.typ
state_anchor/contracts/ping/: Cargo.toml  README.md
state_anchor/contracts/ping/src/: lib.rs
state_anchor/types/: Cargo.toml
state_root/: .gitignore  Cargo.toml
state_root/app/: Cargo.toml
state_root/app/src/: main.rs  ping_client.rs
