[workspace]
resolver = "2"
members = ["contracts/ping", "types", "app"]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 0
lto = true
opt-level = "s"

[workspace.dependencies]
rand = { version = "0.8" }
freenet-stdlib = { path = "/b/by_projects/freenet-stdlib/rust" }
freenet-ping-types = { path = "types", default-features = false }
chrono = { version = "0.4", default-features = false }
sha2 = "=0.10.8"
testresult = "0.4"
borsh = "=1.5.7"
zkm-prover = { path = "../Ziren/crates/prover" }
zkm-sdk = { path = "../Ziren/crates/sdk" }
zkm-verifier = { path = "../Ziren/crates/verifier" }
