
[package]
name = "freenet-ping-contract"
version = "0.1.11"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { workspace = true }
freenet-ping-types = { workspace = true }
serde_json = "1"
getrandom = { version = "*", default-features = false }
sha2 = { workspace = true }
zkm-verifier = { workspace = true }

[build-dependencies]
getrandom = { version = "*", default-features = true }

[features]
default = ["freenet-main-contract", "contract"]
contract = ["freenet-stdlib/contract", "getrandom/js"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]
